--- a/figures/mass/caption.html
+++ b/figures/mass/caption.html
@@ -1,1 +1,1 @@
-<div data-label="931769">Pellentesque suscipit risus massa, non vestibulum libero euismod feugiat. In hac habitasse platea dictumst. Maecenas rutrum lobortis lobortis. Vestibulum convallis porttitor sem ac ultricies.</div>
+<div data-label="931769">Caption text cvan be added by editing the caption.html file in figures/figure-name/caption.html</div>
