--- a/figures/mass/caption.html
+++ b/figures/mass/caption.html
@@ -1,1 +1,1 @@
-<div data-label="931769">Caption text cvan be added by editing the caption.html file in figures/figure-name/caption.html</div>
+<div data-label="931769">Caption text can be added by editing the caption.html file in figures/figure-name/caption.html</div>
