--- a/b1b82a76lgo.html
+++ b/b1b82a76lgo.html
@@ -1,1 +1,1 @@
-<h2>Background in neurological stem cell research</h2><div></div><h3>Embryonic development of cortical neurons in the mouse</h3>
+<h2>Background in neurological stem cell research</h2><h3>Embryonic development of cortical neurons in the mouse</h3>
