--- a/d7f98lgcqto.html
+++ b/d7f98lgcqto.html
@@ -1,1 +1,1 @@
-<div>#Characteristic synchronized burst activity patterns in cultured neuron</div>
+<div>Characteristic synchronized burst activity patterns in cultured neuron</div>
