--- a/s61tio5i7go.html
+++ b/s61tio5i7go.html
@@ -1,1 +1,1 @@
-<div>Embryonic neural progenitor cell transplant</div>
+<h3 data-label="403722" class="ltx_title_subsubsection">Embryonic neural progenitor cell transplant</h3>
