--- a/jcdon0ejq2g.html
+++ b/jcdon0ejq2g.html
@@ -1,1 +1,1 @@
-<div>challenge of maintaining long-term optical quality</div>
+<h3 data-label="186482" class="ltx_title_subsubsection">challenge of maintaining long-term optical quality</h3>
