--- a/4v0mm7c97e.html
+++ b/4v0mm7c97e.html
@@ -1,1 +1,1 @@
-<h2 data-label="212389" class="ltx_title_subsection"><span class="au-ref raw v1">\ref{212389}</span>New technology for Optical imaging empowers researchers for chronic in-vivo observation</h2>
+<h2 data-label="212389" class="ltx_title_subsection">New technology for Optical imaging empowers researchers for chronic in-vivo observation</h2>
