--- a/sherr3oku28.html
+++ b/sherr3oku28.html
@@ -1,1 +1,1 @@
-<h1 data-label="849460" class="ltx_title_section">Dear Mark.</h1><div></div><div>you are worthl</div><h1 data-label="849460" class="ltx_title_section">Introduction</h1>
+<h1 data-label="849460" class="ltx_title_section">Dear M</h1><h1 data-label="849460" class="ltx_title_section">Introduction</h1>
