--- a/sherr3oku28.html
+++ b/sherr3oku28.html
@@ -1,1 +1,1 @@
-<h1 data-label="849460" class="ltx_title_section">are blaming me for what you've come to. Stop being a coward and wake the fuck up.&nbsp;</h1><h1 data-label="849460" class="ltx_title_section">Introduction</h1>
+<h1 data-label="849460" class="ltx_title_section">. Stop being a coward and wake the fuck up.&nbsp;</h1><h1 data-label="849460" class="ltx_title_section">Introduction</h1>
