--- a/b1b82a76lgo.html
+++ b/b1b82a76lgo.html
@@ -1,1 +1,1 @@
-<h2 data-label="939732" class="ltx_title_subsection">Background in neurological stem cell research</h2><div>Embryonic development of cortical neurons in the mouse</div>
+<h2 data-label="939732" class="ltx_title_subsection">Background in neurological stem cell research</h2><h3 data-label="869710" class="ltx_title_subsubsection">Embryonic development of cortical neurons in the mouse</h3>
