--- a/985ggh21bs8.html
+++ b/985ggh21bs8.html
@@ -1,1 +1,1 @@
-<h2 data-label="742787" class="ltx_title_subsection">Promise and Challenges in SC therapy for neurological diseases</h2>
+<h2 data-label="742787" class="ltx_title_subsection">Promise and Challenges in SC therapy for neurological diseases</h2><div></div>
