--- a/h1bqu012pm8.html
+++ b/h1bqu012pm8.html
@@ -1,1 +1,1 @@
-<h3 data-label="917195" class="ltx_title_subsubsection">translating what is learned in the lab: attempts to develop a therapy for humans</h3>
+<div>translating what is learned in the lab: attempts to develop a therapy for humans</div>
