--- a/h1bqu012pm8.html
+++ b/h1bqu012pm8.html
@@ -1,1 +1,1 @@
-<div>translating what is learned in the lab: attempts to develop a therapy for humans</div>
+<h3 data-label="603127" class="ltx_title_subsubsection">translating what is learned in the lab: attempts to develop a therapy for humans</h3>
