--- a/2dno2n1bf18.html
+++ b/2dno2n1bf18.html
@@ -1,1 +1,1 @@
-<h2 data-label="455475" class="ltx_title_subsection">Imaging Calcium dynamics in behaving mouse</h2>
+<div>Imaging Calcium dynamics in behaving mouse</div>
