--- a/h1bqu012pm8.html
+++ b/h1bqu012pm8.html
@@ -1,1 +1,1 @@
-<h2 data-label="764570" class="ltx_title_subsection"></h2><h2 data-label="764570" class="ltx_title_subsection"></h2>
+<h2 data-label="764570" class="ltx_title_subsection"></h2>
