--- a/joqs549r91g.html
+++ b/joqs549r91g.html
@@ -1,1 +1,1 @@
-<h1 data-label="593217" class="ltx_title_section">cranial window implants for mouse neocortex</h1>
+<h1 data-label="593217" class="ltx_title_section">ranial window implants for mouse neocortex</h1>
