--- a/uftja15cbt.html
+++ b/uftja15cbt.html
@@ -1,1 +1,1 @@
-<div></div><div></div><div></div><div>. However, once the cover  glass is installed, it is difficult to access the brain underlying the window  to inject virus or to deliver drugs or chemicals for any cellular manipulation.  </div>
+<div></div><div></div><div></div><div> However, once the cover  glass is installed, it is difficult to access the brain underlying the window  to inject virus or to deliver drugs or chemicals for any cellular manipulation.  </div>
