--- a/i0bh80iqs0o.html
+++ b/i0bh80iqs0o.html
@@ -1,1 +1,1 @@
-<div>Furthermore, long-term observation of network activity and its quantifiable changes could be used as a measure to reflect the network developmental process of stem cells within host brain what was previously unavailable from snapshots of population of cells.</div>
+<div>Fong-term observation of network activity and its quantifiable changes could be used as a measure to reflect the network developmental process of stem cells within host brain what was previously unavailable from snapshots of population of cells.</div>
